<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DA70D6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gamingapp.MainActivity" >

    <TextView
        android:id="@+id/tvgn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#9400D3"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/tvgn"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvp1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etp1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#AFEEEE"
            android:gravity="center"
            android:textStyle="bold"
            android:hint="@string/player_1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/player1"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvp2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etp2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#AFEEEE"
            android:gravity="center"
            android:textStyle="bold"
            android:hint="@string/player_2"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/player2"
        android:layout_margin="35dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_1"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#008080"
            android:text="@string/classic"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#FF0000"
            android:text="@string/advance"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>