<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dda0dd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gamingapp.Classic" >

    <TextView
        android:id="@+id/CTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/game1"
        android:textColor="#4169E1"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/cbuttons_layout"
        android:layout_width="200dp"
        android:layout_height="193dp"
        android:layout_below="@+id/CTV"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:background="#33FFCC"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/L1"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/B1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/B2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/B3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/L2"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/L1"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/B4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/B5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/B6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/L3"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/L2"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/B7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/B8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/B9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cbutton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/cbuttons_layout"
        android:layout_margin="35dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/cbutton_1"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#008080"
            android:text="@string/result"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cbutton_2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#FF0000"
            android:text="@string/close"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>