<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dda0dd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gamingapp.Advance" >

    <TextView
        android:id="@+id/ATV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/game2"
        android:textColor="#FF4500"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/abuttons_layout"
        android:layout_width="200dp"
        android:layout_height="193dp"
        android:layout_below="@+id/ATV"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:background="#33FFCC"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/AL1"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/A1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/A2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/A3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/AL2"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AL1"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/A4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/A5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/A6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/AL3"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AL2"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/A7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/A8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Button
                android:id="@+id/A9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cbutton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/abuttons_layout"
        android:layout_margin="35dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/abutton_1"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#008080"
            android:text="@string/result"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/abutton_2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#FF0000"
            android:text="@string/close"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>